# tspk-dop-service-rust

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  deploy.bash  diesel.toml  docker-compose.yml  key_ssh  ав
.github/workflows/: deploy.yml
entity/: Cargo.toml
entity/src/: user.rs
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240914_110830_create_user_table.rs  m20241009_122804_add_fields_to_user.rs
src/: lib.rs  main.rs
src/config/: constants.rs  mod.rs
src/error/: error.rs
src/handlers/: auth_handler.rs  home_handler.rs  mod.rs
src/handlers/teacher/: contact_handlers.rs  mod.rs
src/routes/: auth_routes.rs  home_routes.rs  mod.rs  teacher_routes.rs
src/routes/handlers/: home_handler.rs
src/services/: user_service.rs
src/utils/: access_control.rs  api_response.rs  constants.rs  hash.rs  jwt.rs  mod.rs
static/: index.html
