[package]
name = "rusty-chat"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } 
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.5.1"
chrono = "0.4.38"
env_logger = "0.11.3"
lazy_static = "1.4.0"
actix-files = "0.6"
sea-orm = { version = "1.0.0-rc.5", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
sha256 = "1.5.0"
jsonwebtoken = "9.3.0"

[[bin]]
name = "rusty-chat"
path = "src/main.rs"


